# Transformers

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
docs/: conf.py
src/: __init__.py
src/models/: __init__.py
src/models/attention/: __init__.py  attention.py  bidirectional_attention.py  causal_attention.py  cross_attention.py  extra_attention.py  multihead_attention.py  single_attention.py
src/models/mlp/: __init__.py  feedforward.py
src/models/transformer/: __init__.py  readme.md  transformer.py
src/tests/: __init__.py  test_bidirectional_attention.py  test_casual_attention.py  test_cross_attention.py  test_extra_attention.py  test_feed_forward.py  test_multi_head_attention.py  test_single_head_attention.py  test_transformer_block.py
