[tool.poetry]
name = "from-scratch"
version = "0.1.0"
description = ""
authors = ["ahmedelsayed968 <ahmedeltop968@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.6.0"
torch = "^2.3.0"
dvc = "^3.50.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
